@@ -38,10 +38,11 @@ alternate_font
 max_range 3
 charset
 "	35	0	1
+dq	"
 \'	27	2	2
 aa	"
 \	37	0	3
-rs	37	0	3
+rs	"
 ^	40	0	4
 ul	45	1	5	max_range 2
 _	"
